# chat-test

./: .env.example  .gitmodules  README.md  conftest.py  docker-compose-production.yml  docker-compose.yml  pyproject.toml
.circleci/: config.yml
chat_app/: asgi.py  celery.py  settings.py  urls.py
chat_app/api/v1/: serializers.py  urls.py  viewsets.py
core/: admin.py
core/management/commands/: add_git_submodule.py  update_submodule.py
core/tests/: test_jwt_endpoints.py
templates/account/email/: password_reset_key_message.html
templates/admin/constance/: change_list.html
templates/admin/constance/includes/: results_list.html
users/: admin.py  models.py  validators.py
users/api/v1/: serializers.py  views.py
users/api/v1/tests/: test_serializers.py
users/tests/: test_serializers.py  test_validators.py
